syntax = "proto3";

package log;

import "google/protobuf/timestamp.proto";  // For timeStamp field

// Enum for log levels
enum LogLevel {
  VERBOSE = 0;
  DEBUG = 1;
  INFO = 2;
  WARN = 3;
  ERROR = 4;
  FATAL = 5;
}

// LogEvent message definition
message LogEvent {
  string logID = 1;
  string mnemonic = 2;

  // Device Info
  string deviceID = 3;
  string deviceName = 4;
  string deviceModel = 5;
  string deviceOS = 6;
  string deviceOSVersion = 7;

  // App Info
  string appVersion = 8;
  string appName = 9;
  string appPackageName = 10;

  // Log Content
  string logMessage = 11;
  LogLevel logLevel = 12;
  string stackTrace = 13;

  // Metadata
  google.protobuf.Timestamp timeStamp = 14;
  string sessionID = 15;
  string userID = 16;
  string networkStatus = 17;
  string location = 18;

  // Custom fields for extensibility
  map<string, string> customAttributes = 19;
}

// Response for single or bulk log upload
message LogResponse {
  bool success = 1;
  string message = 2;
}

// Bulk upload request
message BulkLogRequest {
  repeated LogEvent logs = 1;
}

// Define the LogService with RPC methods
service LogService {
  // RPC method to upload a single log event
  rpc UploadLog (LogEvent) returns (LogResponse);

  // RPC method to upload multiple log events at once
  rpc UploadLogs (BulkLogRequest) returns (LogResponse);
}